feat: image file 객체 생성
Co-authored-by: hgo641 <hgo641@gmail.com>